Changed data json path

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <!--script src="./static/js/bonus.js"></script-->
-  <script src="./data/samples.json"></script>
+  <script src="./static/data/samples.json"></script>
   
 </body>
 
