--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
+  <script src="./app.js"></script>
   <!--script src="./static/js/bonus.js"></script-->
-  <script src="./static/data/samples.json"></script>
+  <script src="./data/samples.json"></script>
   
 </body>
 
