--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="app.js"></script>
+  <script src="./static/js/app.js"></script>
   <!--script src="./static/js/bonus.js"></script-->
   <script src="samples.json"></script>
   
